--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>SUDDA LOGIN</title>
+<title>SUDDA AVIATOR PREDICTOR PRO</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -12,28 +13,33 @@ body{
   font-family:'Montserrat',sans-serif;
   background:linear-gradient(135deg,#0b0014,#1a0033);
   color:#fff;
+}
+.hidden{display:none;}
+.container{
+  min-height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  min-height:100vh;
+  padding:20px;
 }
-.container{
+.card{
   width:100%;
-  max-width:400px;
+  max-width:420px;
   background:rgba(0,0,0,0.35);
   padding:25px;
   border-radius:14px;
   text-align:center;
 }
 h1{
+  font-size:22px;
   margin-bottom:15px;
 }
 input{
   width:100%;
   padding:14px;
-  margin-bottom:12px;
-  border-radius:10px;
   border:none;
+  border-radius:10px;
+  margin-bottom:12px;
   font-size:15px;
 }
 button{
@@ -45,52 +51,163 @@ button{
   color:#fff;
   font-size:16px;
   font-weight:600;
-  cursor:pointer;
 }
-.error{
-  color:#ff6a6a;
+.error{color:#ff6a6a;font-size:14px;margin-top:8px;}
+
+.header{
+  background:linear-gradient(135deg,#ff6a00,#ff9a3c);
+  padding:15px;
+  border-radius:12px;
+  text-align:center;
+  font-weight:700;
+}
+.status{
+  display:flex;
+  justify-content:space-between;
+  margin-top:12px;
   font-size:14px;
-  margin-top:8px;
 }
-p a{
-  color:#00e1ff;
+.signal{
+  width:220px;
+  height:220px;
+  border-radius:50%;
+  border:3px solid #00c3ff;
+  margin:20px auto;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+}
+.signal.active{border-color:#ff6a00;}
+.btn{
+  display:block;
   text-decoration:none;
+  padding:14px;
+  border-radius:10px;
+  margin-top:10px;
+  font-weight:600;
+  color:#fff;
+}
+.whatsapp{background:#25D366;}
+.telegram{background:#0088cc;}
+.footer{
+  margin-top:15px;
+  font-size:12px;
+  opacity:0.7;
+}
+.logout{
+  margin-top:10px;
+  background:#ff3b3b;
 }
 </style>
 </head>
+
 <body>
 
-<div class="container">
-  <h1>SUDDA AVIATOR PREDICTOR PRO</h1>
-  <p>Enter Activation Code</p>
-  <input type="text" id="codeInput" placeholder="Activation Code">
-  <button onclick="login()">ACTIVATE</button>
-  <div class="error" id="error"></div>
-  <p>Telegram: <a href="https://t.me/Sasindumadumal" target="_blank">t.me/Sasindumadumal</a></p>
-  <p>WhatsApp: <a href="https://wa.me/message/G3RNRGURKXLWL1" target="_blank">Click Here</a></p>
+<!-- LOGIN PAGE -->
+<div class="container" id="loginPage">
+  <div class="card">
+    <h1>SUDDA AVIATOR PREDICTOR PRO</h1>
+    <p>Enter your activation code</p>
+    <input type="text" id="codeInput" placeholder="Activation Code">
+    <button onclick="login()">ACTIVATE</button>
+    <div class="error" id="error"></div>
+  </div>
 </div>
 
+<!-- MAIN PAGE -->
+<div class="container hidden" id="mainPage">
+  <div class="card">
+
+    <div class="header">SUDDA AVIATOR PREDICTOR PRO</div>
+
+    <div class="status">
+      <div id="time">00:00:00</div>
+      <div id="expiry"></div>
+    </div>
+
+    <div class="signal" id="signal">
+      <div id="signalText">PREDICTING<br>NEXT SIGNAL</div>
+    </div>
+
+    <div id="recommend">Analyzing patterns...</div>
+
+    <a class="btn whatsapp" href="https://wa.me/message/G3RNRGURKXLWL1" target="_blank">
+      JOIN WHATSAPP
+    </a>
+
+    <a class="btn telegram" href="https://t.me/Sasindumadumal" target="_blank">
+      JOIN TELEGRAM
+    </a>
+
+    <button class="logout" onclick="logout()">LOGOUT</button>
+
+    <div class="footer">POWERED BY SUDDA</div>
+
+  </div>
+</div>
+
+<!-- LOAD ACTIVATION CODES -->
 <script src="codes.js"></script>
+
 <script>
+// ===== LOGIN =====
 function login(){
-  const code = document.getElementById("codeInput").value.trim().toUpperCase();
-  if(!activationCodes[code]){
+  const code=document.getElementById("codeInput").value.trim().toUpperCase();
+
+  if(!activationCodes || !activationCodes[code]){
     document.getElementById("error").innerText="Invalid activation code";
     return;
   }
 
-  const days = activationCodes[code];
-  const expiry = new Date();
-  expiry.setDate(expiry.getDate() + days);
-  localStorage.setItem("sudda_expiry", expiry.getTime());
-  window.location.href="predictor.html";
+  const days=activationCodes[code];
+  const expiry=new Date();
+  expiry.setDate(expiry.getDate()+days);
+
+  localStorage.setItem("sudda_expiry",expiry.getTime());
+  location.reload();
 }
 
-// auto-redirect if already logged in
-const savedExpiry = localStorage.getItem("sudda_expiry");
-if(savedExpiry && new Date().getTime() < savedExpiry){
-  window.location.href="predictor.html";
+// ===== CHECK LOGIN =====
+const savedExpiry=localStorage.getItem("sudda_expiry");
+if(savedExpiry && new Date().getTime()<savedExpiry){
+  document.getElementById("loginPage").classList.add("hidden");
+  document.getElementById("mainPage").classList.remove("hidden");
+  document.getElementById("expiry").innerText=
+    "Expires: "+new Date(Number(savedExpiry)).toLocaleDateString();
+}else{
+  localStorage.removeItem("sudda_expiry");
 }
+
+// ===== LOGOUT =====
+function logout(){
+  localStorage.removeItem("sudda_expiry");
+  location.reload();
+}
+
+// ===== CLOCK =====
+setInterval(()=>{
+  const d=new Date();
+  document.getElementById("time").innerText=d.toLocaleTimeString();
+},1000);
+
+// ===== SIGNAL LOGIC =====
+const signal=document.getElementById("signal");
+const signalText=document.getElementById("signalText");
+const recommend=document.getElementById("recommend");
+
+function generateSignal(){
+  signal.classList.remove("active");
+  signalText.innerHTML="PREDICTING<br>NEXT SIGNAL";
+  recommend.innerText="Analyzing patterns...";
+  setTimeout(()=>{
+    signal.classList.add("active");
+    const odds=Math.random()>0.6?"7x – 10x":"3x – 5x";
+    signalText.innerHTML="SIGNAL ACTIVE";
+    recommend.innerText="Recommended Exit: "+odds;
+  },3000);
+}
+setInterval(generateSignal,15000);
 </script>
 
 </body>
